--- a/bg_slider/index.html
+++ b/bg_slider/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="slider-container">
 		<div class="slide active"
-			style="background-image: url('https://img1.goodfon.ru/wallpaper/nbig/f/19/cvety-rozovyy-nezhno-vesna.jpg');">
+			style="background-image: url('https://i.pinimg.com/originals/e2/fa/4f/e2fa4f4218c688b5518696cb7a97c531.png');">
 		</div>
 		<div class="slide"
 		style="background-image: url('https://img3.badfon.ru/wallpaper/big/0/28/viola-cvety-nezhnye-svetlo.jpg');">
@@ -23,8 +23,8 @@
 		<div class="slide"
 		style="background-image: url('https://wallbox.ru/wallpapers/main/201307/cvety-rasteniya-stebli-b623ab1.jpg');">
 		</div>
-		<div class="slide"
-		style="background-image: url('https://99px.ru/sstorage/53/2014/12/tmb_117282_4979.jpg');">
+		<!-- <div class="slide"
+		style="background-image: url('');"> -->
 		</div>
 		<button class="arrow left-arrow" id="left">
 			<i class="fas fa-arrow-left"></i>
