--- a/bg_slider/index.html
+++ b/bg_slider/index.html
@@ -12,20 +12,18 @@
 <body>
 	<div class="slider-container">
 		<div class="slide active"
-			style="background-image: url('https://i.pinimg.com/originals/e2/fa/4f/e2fa4f4218c688b5518696cb7a97c531.png');">
+			style="background-image: url('https://million-wallpapers.ru/wallpapers/2/9/493628122453386/izobrazhenie-vysotnyx-zdanij-v-ch-rno-belom-vide.jpg');">
 		</div>
 		<div class="slide"
-		style="background-image: url('https://img3.badfon.ru/wallpaper/big/0/28/viola-cvety-nezhnye-svetlo.jpg');">
+		style="background-image: url('https://catherineasquithgallery.com/uploads/posts/2021-02/1614264439_52-p-cherno-belii-fon-dlya-rabochego-stola-64.jpg');">
 		</div>
 		<div class="slide"
-		style="background-image: url('https://99px.ru/sstorage/53/2016/01/tmb_154935_3777.jpg');">
+		style="background-image: url('https://kartinkin.net/uploads/posts/2021-01/1611397334_10-p-mrachnii-serii-fon-12.jpg');">
 		</div>
 		<div class="slide"
-		style="background-image: url('https://wallbox.ru/wallpapers/main/201307/cvety-rasteniya-stebli-b623ab1.jpg');">
+		style="background-image: url('https://hdwallsource.com/img/2014/3/street-background-36554-37389-hd-wallpapers.jpg');">
 		</div>
-		<!-- <div class="slide"
-		style="background-image: url('');"> -->
-		</div>
+	</div>
 		<button class="arrow left-arrow" id="left">
 			<i class="fas fa-arrow-left"></i>
 		</button>
@@ -34,6 +32,6 @@
 			<i class="fas fa-arrow-right"></i>
 		</button>
 	</div>
-<script src="script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
